--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
       <h1 class="Heading">Pomodoro Timer</h1>
       <div class="timer">
-        <a id="time">25:00 HEYYYY</a>
+        <a id="time">25:00</a>
       </div>
       <div class="controls">
         <button id="start">Start</button>
